Got images working on all character cards.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
             <div class="col-3" id="obi-wan"></div>
             <div class="col-3" id="luke-skywalker"></div>
             <div class="col-3" id="darth-sidious"></div>
-            <div class="col-3" id="darth-maul"></div>
+            <div class="col-3" id="darth-maul">
+                <div class="row">
+                    <div class="col-10">
+                        
+                    </div>
+                </div>
+                
+            </div>
         </div>
         <div class="row">
             <div class="col-3">
