All character and enemy selection jQuery is done.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="assets/javascript/game.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,22 +36,65 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-3" id="obi-wan"></div>
-            <div class="col-3" id="luke-skywalker"></div>
-            <div class="col-3" id="darth-sidious"></div>
-            <div class="col-3" id="darth-maul">
-                <div class="row">
-                    <div class="col-10">
-                        
-                    </div>
+            <div class="col-3">
+                <div id="obi-wan" class="character-cards">
+                    <div class="char-name">Obi-Wan Kenobi</div>
+                    <img src='assets/images/obiWan.png' height='80%' width='80%'>
+                    <div id="obi-health">Health: </div>
                 </div>
-                
+            </div>
+            <div class="col-3">
+                <div id="luke-skywalker" class="character-cards">
+                    <div class="char-name">Luke Skywalker</div>
+                    <img src='assets/images/lukeSkywalker.png' height='80%' width='80%'>
+                    <div id="luke-health">Health: </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div id="darth-sidious" class="character-cards">
+                    <div class="char-name">Darth Sidious</div>
+                    <img src='assets/images/darthSidious.png' height='80%' width='80%'>
+                    <div id="sidious-health">Health: </div>
+                </div>
+            </div>
+            <div class="col-3">
+                <div id="darth-maul" class="character-cards">
+                    <div class="char-name">Darth Maul</div>
+                    <img src='assets/images/darthMaul.png' height='80%' width='80%'>
+                    <div id="maul-health">Health: </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h1>Your Character</h1>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <div id="your-character"></div>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-3">
-                <h1>Your Character</h1>
-                <div id="your-character"></div>
+            <div class="col-12">
+                <h1>Enemies Available To Attack</h1>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div id="enemies"></div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <h1>Fight Section</h1>
+                <button class="mb-2">Attack</button>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div id="current-fighter"></div>
+                </div>
             </div>
         </div>
     </div>
