--- a/index.html
+++ b/index.html
@@ -89,11 +89,15 @@
         <div class="row">
             <div class="col-12">
                 <h1>Fight Section</h1>
-                <button class="mb-2">Attack</button>
+                <button id="attack-button" class="mb-2">Attack</button>
+                <h1>Defender</h1>
             </div>
             <div class="row">
                 <div class="col-12">
                     <div id="current-fighter"></div>
+                    <div class="clearfix"></div>
+                    <div id="your-attack"></div>
+                    <div id="enemy-attack"></div>
                 </div>
             </div>
         </div>
