Can now fight through all enemies.  Restart button pops up if you lose but is not functional.

--- a/index.html
+++ b/index.html
@@ -92,15 +92,16 @@
                 <button id="attack-button" class="mb-2">Attack</button>
                 <h1>Defender</h1>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div id="current-fighter"></div>
-                    <div class="clearfix"></div>
-                    <div id="your-attack"></div>
-                    <div id="enemy-attack"></div>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div id="current-fighter" class="clearfix"></div>
+                <div id="your-attack"></div>
+                <button id="restart-btn">Restart</button>
+                <div id="enemy-attack"></div>
             </div>
         </div>
+
     </div>
 </body>
 
