Fixed health to be in span not delete the word 'health'.

--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
                 <div id="obi-wan" class="character-cards">
                     <div class="char-name">Obi-Wan Kenobi</div>
                     <img src='assets/images/obiWan.png' height='80%' width='80%'>
-                    <div id="obi-health">Health: </div>
+                    <div>Health: <span id="obi-health"></span></div>
                 </div>
             </div>
             <div class="col-3">
                 <div id="luke-skywalker" class="character-cards">
                     <div class="char-name">Luke Skywalker</div>
                     <img src='assets/images/lukeSkywalker.png' height='80%' width='80%'>
-                    <div id="luke-health">Health: </div>
+                    <div>Health: <span id="luke-health"></span></div>
                 </div>
             </div>
             <div class="col-3">
                 <div id="darth-sidious" class="character-cards">
                     <div class="char-name">Darth Sidious</div>
                     <img src='assets/images/darthSidious.png' height='80%' width='80%'>
-                    <div id="sidious-health">Health: </div>
+                    <div>Health: <span id="sidious-health"></span></div>
                 </div>
             </div>
             <div class="col-3">
                 <div id="darth-maul" class="character-cards">
                     <div class="char-name">Darth Maul</div>
                     <img src='assets/images/darthMaul.png' height='80%' width='80%'>
-                    <div id="maul-health">Health: </div>
+                    <div>Health: <span id="maul-health"></span></div>
                 </div>
             </div>
 
